--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,16 @@ services:
     adminer:
         image: dockette/adminer:full-php5
         restart: always
+        container_name: ${ADMINER_CONTAINER_NAME}
         ports:
             - ${ADMINER_PORT}:80
 
     dbPostgres:
         image: postgres:10
+        container_name: ${POSTGRES_CONTAINER_NAME}
         restart: always
+        volumes:
+            - ${POSTGRES_DATA_DIR}:/var/lib/postgresql/data
         ports:
             - ${POSTGRES_PORT}:5432
         environment:
