--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ ADMINER_CONTAINER_NAME=MyAdminer
 ADMINER_PORT=8001
 
 POSTGRES_CONTAINER_NAME=MyPostgres
-POSTGRES_DATA_DIR=~/workspace/docker-data/database/postgresql/
+POSTGRES_DATA_DIR=./data/postgresql/
 POSTGRES_PORT=54321
 POSTGRES_DB=pgDB
 POSTGRES_USER=root
