--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ POSTGRES_PORT=54321
 POSTGRES_DB=pgDB
 POSTGRES_USER=root
 POSTGRES_PASSWORD=123456
+
+MYSQL_CONTAINER_NAME=MyMySQL
+MYSQL_DATA_DIR=./data/mysql/
+MYSQL_PORT=33061
+MYSQL_DB=mysqlDB
+MYSQL_ROOT_PASSWORD=123456
