--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,8 @@ services:
             - POSTGRES_USER=${POSTGRES_USER}
             - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     dbMysql:
-        image: mysql:8
+        image: mysql:8.0.15
+        command: --default-authentication-plugin=mysql_native_password
         container_name: ${MYSQL_CONTAINER_NAME}
         restart: always
         volumes:
@@ -30,5 +31,5 @@ services:
         ports:
             - ${MYSQL_PORT}:3306
         environment:
-            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-            MYSQL_DATABASE: ${MYSQL_DB}
+            - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+            - MYSQL_DATABASE=${MYSQL_DB}
