--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 ADMINER_CONTAINER_NAME=MyAdminer
 ADMINER_PORT=8001
 
+PGADMIN_DIR=./data/pgadmin/
+
 POSTGRES_CONTAINER_NAME=MyPostgres
 POSTGRES_DATA_DIR=./data/postgresql/
 POSTGRES_PORT=54321
