--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,22 @@ services:
         container_name: ${ADMINER_CONTAINER_NAME}
         ports:
             - ${ADMINER_PORT}:80
+    pgadmin:
+      image: dpage/pgadmin4:4.18
+      restart: always
+      environment:
+        PGADMIN_DEFAULT_EMAIL: admin@pgadmin4.com
+        PGADMIN_DEFAULT_PASSWORD: 123456
+        PGADMIN_LISTEN_PORT: 80
+      ports:
+        - 8002:80
+      volumes:
+        - ${PGADMIN_DIR}:/var/lib/pgadmin
+      links:
+        - "dbPostgres:pgsql-server"
 
     dbPostgres:
-        image: postgres:10
+        image: postgres:12.2
         container_name: ${POSTGRES_CONTAINER_NAME}
         restart: always
         volumes:
