--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
 ADMINER_CONTAINER_NAME=MyAdminer
 ADMINER_PORT=8001
 
+PGADMIN_CONTAINER_NAME=MyPgadmin4
 PGADMIN_DIR=./data/pgadmin/
+PGADMIN_DEFAULT_EMAIL=test@123.com
+PGADMIN_DEFAULT_PASSWORD=123456
+PGADMIN_PORT=8002
 
 POSTGRES_CONTAINER_NAME=MyPostgres
 POSTGRES_DATA_DIR=./data/postgresql/
