--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,51 @@
-version: '3'
+version: '3.8'
 
 services:
-    adminer:
-        # image: dockette/adminer:full-php5
-        image: dockette/adminer
-        restart: always
-        container_name: ${ADMINER_CONTAINER_NAME}
-        ports:
-            - ${ADMINER_PORT}:80
-    pgadmin:
-      image: dpage/pgadmin4:4.18
-      restart: always
-      environment:
-        PGADMIN_DEFAULT_EMAIL: admin@pgadmin4.com
-        PGADMIN_DEFAULT_PASSWORD: 123456
-        PGADMIN_LISTEN_PORT: 80
-      ports:
-        - 8002:80
-      volumes:
-        - ${PGADMIN_DIR}:/var/lib/pgadmin
-      links:
-        - "dbPostgres:pgsql-server"
+############################
+# Setup database container #
+############################
+  postgres_db:
+    image: postgres:12.2
+    container_name: ${POSTGRES_CONTAINER_NAME}
+    restart: always
+    ports:
+      - ${POSTGRES_PORT}:5432
+    environment: 
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - ${POSTGRES_DATA_DIR}:/var/lib/postgresql/data 
 
-    dbPostgres:
-        image: postgres:12.2
-        container_name: ${POSTGRES_CONTAINER_NAME}
-        restart: always
-        volumes:
-            - ${POSTGRES_DATA_DIR}:/var/lib/postgresql/data
-        ports:
-            - ${POSTGRES_PORT}:5432
-        environment:
-            - POSTGRES_DB=${POSTGRES_DB}
-            - POSTGRES_USER=${POSTGRES_USER}
-            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    dbMysql:
-        image: mysql:8.0.15
-        command: --default-authentication-plugin=mysql_native_password
-        container_name: ${MYSQL_CONTAINER_NAME}
-        restart: always
-        volumes:
-            - ${MYSQL_DATA_DIR}:/var/lib/mysql
-        ports:
-            - ${MYSQL_PORT}:3306
-        environment:
-            - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-            - MYSQL_DATABASE=${MYSQL_DB}
+  pgadmin:
+    image: dpage/pgadmin4:5.1
+    container_name: ${PGADMIN_CONTAINER_NAME}
+    restart: always
+    ports:
+      - ${PGADMIN_PORT}:8080/tcp
+    environment: 
+      - PGADMIN_LISTEN_ADDRESS=0.0.0.0
+      - PGADMIN_LISTEN_PORT=8080
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
+
+
+  dbMysql:
+    image: mysql:8.0.15
+    command: --default-authentication-plugin=mysql_native_password
+    container_name: ${MYSQL_CONTAINER_NAME}
+    restart: always
+    volumes:
+      - ${MYSQL_DATA_DIR}:/var/lib/mysql
+    ports:
+      - ${MYSQL_PORT}:3306
+    environment:
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DB}
+
+  adminer:
+    image: dockette/adminer
+    container_name: ${ADMINER_CONTAINER_NAME}
+    restart: always
+    ports:
+      - ${ADMINER_PORT}:80
