--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     restart: always
     ports:
       - ${PGADMIN_PORT}:8080/tcp
+    volumes:
+      - ${PGADMIN_DIR}:/var/lig/pgadmin
     environment: 
       - PGADMIN_LISTEN_ADDRESS=0.0.0.0
       - PGADMIN_LISTEN_PORT=8080
@@ -44,7 +46,7 @@ services:
       - MYSQL_DATABASE=${MYSQL_DB}
 
   adminer:
-    image: dockette/adminer
+    image: dehy/adminer
     container_name: ${ADMINER_CONTAINER_NAME}
     restart: always
     ports:
