--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,11 @@ MYSQL_DATA_DIR=./data/mysql/
 MYSQL_PORT=33060
 MYSQL_DB=mysqlDB
 MYSQL_ROOT_PASSWORD=123456
+
+
+MONGO_CONTAINER_NAME=MyMongo
+MONGO_DATA_DIR=./data/mongo/
+MONGO_PORT=27017
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=123456
+MONGO_INITDB_DATABASE=mongoDB
