--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,21 +17,6 @@ services:
     volumes:
       - ${POSTGRES_DATA_DIR}:/var/lib/postgresql/data 
 
-  pgadmin:
-    image: dpage/pgadmin4:5.1
-    container_name: ${PGADMIN_CONTAINER_NAME}
-    restart: always
-    ports:
-      - ${PGADMIN_PORT}:8080/tcp
-    volumes:
-      - ${PGADMIN_DIR}:/var/lig/pgadmin
-    environment: 
-      - PGADMIN_LISTEN_ADDRESS=0.0.0.0
-      - PGADMIN_LISTEN_PORT=8080
-      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
-      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
-
-
   dbMysql:
     image: mysql:8.0.15
     command: --default-authentication-plugin=mysql_native_password
@@ -45,9 +30,38 @@ services:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_DATABASE=${MYSQL_DB}
 
+  mongodb:
+    image: mongo:latest
+    container_name: ${MONGO_CONTAINER_NAME}
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+      - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE}
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - ${MONGO_DATA_DIR}:/data/db
+    ports:
+      - ${MONGO_PORT}:27017
+    restart: unless-stopped
+
   adminer:
     image: dehy/adminer
     container_name: ${ADMINER_CONTAINER_NAME}
     restart: always
     ports:
       - ${ADMINER_PORT}:80
+
+  pgadmin:
+    image: dpage/pgadmin4:5.1
+    container_name: ${PGADMIN_CONTAINER_NAME}
+    restart: always
+    ports:
+      - ${PGADMIN_PORT}:8080/tcp
+    volumes:
+      - ${PGADMIN_DIR}:/var/lig/pgadmin
+    environment: 
+      - PGADMIN_LISTEN_ADDRESS=0.0.0.0
+      - PGADMIN_LISTEN_PORT=8080
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
