--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ PGADMIN_DEFAULT_EMAIL=test@123.com
 PGADMIN_DEFAULT_PASSWORD=123456
 PGADMIN_PORT=8002
 
+PHPMYADMIN_CONTAINER_NAME=MyPhpMyAdmin
+PHPMYADMIN_PORT=8003
+
 POSTGRES_CONTAINER_NAME=MyPostgres
 POSTGRES_DATA_DIR=./data/postgresql/
 POSTGRES_PORT=54320
