--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,9 +66,11 @@ services:
       - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
       - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
   phpmyadmin:
-    image: phpmyadmin
+    image: phpmyadmin/phpmyadmin
     container_name: ${PHPMYADMIN_CONTAINER_NAME}
     restart: always
+    volumes: 
+      - "./etc/phpmyadmin/config.user.inc.php:/etc/phpmyadmin/config.user.inc.php"
     ports:
       - ${PHPMYADMIN_PORT}:80
     environment:
